--- a/style.css
+++ b/style.css
@@ -70,3 +70,27 @@ input:focus {
   border: 1px solid  hsl(248, 32%, 49%);
   outline: none;
 }
+
+button {
+  background-color: hsl(154, 59%, 51%);
+  width: 100%;
+  border: 1px solid hsl(154, 59%, 45%);
+  box-shadow: 0 2px hsl(154, 59%, 45%);
+  padding: 15px 25px;
+  border-radius: 5px;
+  font-family: 'Poppins',
+  sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: none;
+}
+
+button:active {
+  box-shadow: 0 0 hsl(154, 59%, 45%);
+  transform: translateY(2px);
+}
