--- a/style.css
+++ b/style.css
@@ -52,6 +52,21 @@ p {
 
 .box-blue {
   background-color: hsl(248, 32%, 49%);
+  padding: 20px;
+}
+
+.form-control {
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.form-control small {
+  position: absolute;
+  bottom: -20px;
+  right: 0;
+  opacity: 0;
+  text-align: right;
+
 }
 
 input {
@@ -84,6 +99,8 @@ button {
   font-size: 15px;
   color: #ffffff;
   cursor: pointer;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 
 button:focus {
@@ -93,4 +110,18 @@ button:focus {
 button:active {
   box-shadow: 0 0 hsl(154, 59%, 45%);
   transform: translateY(2px);
+}
+
+small {
+  color: hsl(246, 25%, 77%);
+  display: block;
+  font-size: 11px;
+  font-weight: 500;
+  margin-top: 15px;
+}
+
+small a {
+  color: hsl(0, 100%, 74%);
+  text-decoration: none;
+  font-weight: 600;
 }
