--- a/style.css
+++ b/style.css
@@ -60,8 +60,10 @@ p {
 }
 
 .form-control small {
+  color: hsl(0, 100%, 74%);
+  font-weight: 600;
   position: absolute;
-  bottom: -20px;
+  bottom: -25px;
   right: 0;
   opacity: 0;
   text-align: right;
