--- a/style.css
+++ b/style.css
@@ -70,6 +70,11 @@ p {
 
 }
 
+.form-control.error input {
+  border-color: hsl(0, 100%, 74%);
+  color: hsl(0, 100%, 74%);
+}
+
 input {
   display: block;
   width: 100%;
@@ -85,6 +90,21 @@ input {
 input:focus {
   border: 1px solid  hsl(248, 32%, 49%);
   outline: none;
+}
+
+.form-control img {
+  opacity: 0;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+}
+
+.form-control.error img {
+  opacity: 1;
+}
+
+.form-control.error input::placeholder {
+  color: hsl(0, 100%, 74%);
 }
 
 button {
